--- a/index.html
+++ b/index.html
@@ -90,11 +90,38 @@
 				<section>
 					<section>
 						<h2>Cutting the mustard!</h2>
-						<p>Developing for the lowest comon denominator, and enchancing progressivly.</p>
+						<p>Developing for the lowest comon denominator and enchancing progressivly.</p>
 
 						<br/>
 
 						<img style="border: none;" src="http://blogs.msdn.com/blogfiles/usisvde/WindowsLiveWriter/JonBoxExplainsAcceleratorsWebSlicesSearc_A8D1/Internet%20Explorer%208%20IE%20logo%20h_2.png">
+					</section>
+
+					<section>
+						<h2>Our stack</h2>
+
+						<p>BBC iWonder is built with a wide variety of technologies, including:</p>
+
+						<ul>
+							<li>PHP</li>
+							<li>HTML5</li>
+							<li>Sass</li>
+							<li>require.js</li>
+							<li>Modernizr</li>
+						</ul>
+					</section>
+
+					<section>
+						<h2>How we cut the mustard</h2>
+
+						<p>Each part of iWonder is built into it's own modular component, we then wire each component up using require.js and cut the mustard accordingly!</p>
+
+						<ul>
+							<li>PHP</li>
+							<li>HTML5</li>
+							<li>Sass</li>
+							<li>require.js</li>
+							<li>Modernizr</li>
 					</section>
 				</section>
 
