--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>BBC Women in Technology - The HTML Presentation Framework</title>
+		<title>BBC Knowledge and Learning</title>
 
 		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
 		<meta name="author" content="Hakim El Hattab">
@@ -42,94 +42,62 @@
 			<div class="slides">
 				<section>
 					<h1><img width="200" style="border: none" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/eb/BBC.svg/800px-BBC.svg.png">
-					<h1>Building BBC iWonder</h1>
-					<h3>Modular, responsive, optimal & mobile first!</h3>
+					<h1>Knowledge and Learning</h1>
+					<h3>iWonder, Bitesize, Food, Timelines, Guides...</h3>
 					<p>
-						<small>Created by <a href="http://jacob.uk.com">Jacob Clark</a> / <a href="http://twitter.com/imjacobclark">@imjacobclark</a></small>
+						<small><a href="http://jacob.uk.com">Jacob Clark</a> / <a href="http://twitter.com/imjacobclark">@imjacobclark</a></small>
 					</p>
 				</section>
 
 				<section>
 					<section>
-						<h2>About me...</h2>
+						<h2>HELLO!</h2>
 						<p>
 							I'm Jacob Clark, a developer for the BBCs Knowledge and Learning department in Salford.
 						</p>
 					</section>
 
 					<section>
-						<h2>I'm currently working on...</h2>
+						<h2>Our team...</h2>
 						<p>
-							The next version of <strong>BBC Food</strong> (in the cloud).
-						</p>
+							We have:
 
-						<p>
-							I've also previously been involved with the development of <strong>BBC iWonder</strong> and all other <strong>genre portals</strong> on the BBC site, from <strong>Arts to Make it Digital</strong>.
+							<ul>
+								<li>1 Product Manager</li>
+								<li>1 Project Manager</li>
+								<li>1 Business Analyist</li>
+								<li>1 Development Lead</li>
+								<li>6 Developers</li>
+								<li>2 Testers</li>
+								<li>2 Apprentices/Graduates</li>
 						</p>
 					</section>
 				</section>
 
 				<section>
 					<section>
-						<h2>What is iWonder?</h2>
-						<p>An online portal to content across the BBC</p>
-						<img style="border: none" src="images/iwonder.png">
-					</section>
-					<section>
-						<h2>Who is our audience?</h2>
-						<p>BBC iWonder has a wide potential audience, from schools browsing on desktop computers to casual learners on tablets and mobiles!</p>
-					</section>
-					<section>
-						<h2>How do we do it?</h2>
-						<p>Due to the potential hundreds of different browsers we support, BBC iWonder needs to be responsive, accessible on a wide variety of platforms from Smartphones to Smart TVs and fast for those slow connections.</p>
-						<br/>
-						<p>BBC iWonder <strong>cuts the mustard</strong></p>
-					</section>
-				</section>
+						<h2>About K&L</h2>
 
-				<section>
-					<section>
-						<h2>Cutting the mustard!</h2>
-						<p>Developing for the lowest comon denominator and enchancing progressivly.</p>
-
-						<br/>
-
-						<img style="border: none;" src="http://blogs.msdn.com/blogfiles/usisvde/WindowsLiveWriter/JonBoxExplainsAcceleratorsWebSlicesSearc_A8D1/Internet%20Explorer%208%20IE%20logo%20h_2.png">
+						<p>We have a large product suite, from Bitesize to iWonder and Arts to Earth!
 					</section>
 
 					<section>
-						<h2>Our stack</h2>
-
-						<p>BBC iWonder is built with a wide variety of technologies, including:</p>
+						<h2>Audience reach...</h2>
 
 						<ul>
-							<li>PHP</li>
-							<li>HTML5</li>
-							<li>Sass</li>
-							<li>require.js</li>
-							<li>Modernizr</li>
+							<li>Bitesize reaches over 2m unique browsers per week on the lead up to exams!</li>
+							<li>Over 80% of 14-16 year olds use Bitesize to prepare for final exams!</li>
+							<li>Our most popular guide `what’s the right diet for me?` reached over 1m users in a single week when it was published!</li>
 						</ul>
-					</section>
-
-					<section>
-						<h2>How we cut the mustard</h2>
-
-						<p>Each part of iWonder is built into it's own modular component, we then wire each component up using require.js and cut the mustard accordingly!</p>
-
-						<ul>
-							<li>PHP</li>
-							<li>HTML5</li>
-							<li>Sass</li>
-							<li>require.js</li>
-							<li>Modernizr</li>
 					</section>
 				</section>
 
 				<section style="text-align: left;">
-					<h1>THE END</h1>
+					<h1>Thanks!</h1>
 					<p>
-						- <a href="http://slides.com">Try the online editor</a> <br>
-						- <a href="https://github.com/hakimel/reveal.js">Source code &amp; documentation</a>
+						- <a href="http://bbc.co.uk/iwonder">iWonder</a> <br>
+						- <a href="http://bbc.co.uk/food">Food</a> <br>
+						- <a href="http://bbc.co.uk/bitesize">Bitesize</a> <br>
 					</p>
 				</section>
 
