--- a/index.html
+++ b/index.html
@@ -90,14 +90,27 @@
 							<li>Our most popular guide `what’s the right diet for me?` reached over 1m users in a single week when it was published!</li>
 						</ul>
 					</section>
+
+					<section>
+						<h2>Our products technically...</h2>
+
+						<ul>
+							<li>In the cloud on Amazon Web Services</li>
+							<li>Responsive and mobile first</li>
+							<li>Test and Behaviour driven</li>
+							<li>Continously Delivered</li>
+							<li>Automated testing throughout continous intergration</li>
+						</ul>
+					</section>
 				</section>
 
 				<section style="text-align: left;">
 					<h1>Thanks!</h1>
 					<p>
-						- <a href="http://bbc.co.uk/iwonder">iWonder</a> <br>
-						- <a href="http://bbc.co.uk/food">Food</a> <br>
-						- <a href="http://bbc.co.uk/bitesize">Bitesize</a> <br>
+						<li>I’ll be around in the exhibition later</li>
+						<li>Catch me on Twitter @imjacobclark</li>
+						<li>Also on GitHub @imjacobclark</li>
+
 					</p>
 				</section>
 
