--- a/index.html
+++ b/index.html
@@ -51,10 +51,13 @@
 
 				<section>
 					<section>
-						<h2>HELLO!</h2>
-						<p>
-							I'm Jacob Clark, a developer for the BBCs Knowledge and Learning department in Salford.
-						</p>
+						<h2>About me...</h2>
+						<ul>
+							<li>I'm Jacob Clark</li>
+							<li>A Web Developer in Knowledge and Learning</li>
+							<li>Based in MediaCityUK, Salford</li>
+							<li>Passionate about modular, self containing components and the cloud (microservices)</li>
+						</ul>
 					</section>
 
 					<section>
@@ -78,7 +81,14 @@
 					<section>
 						<h2>About K&L</h2>
 
-						<p>We have a large product suite, from Bitesize to iWonder and Arts to Earth!
+						<p>We have a large product suite, including:</p>
+
+						<ul>
+							<li>Bitesize</li>
+							<li>iWonder</li>
+							<li>Microbit</li>
+							<li>Food</li>
+							<li>Genre Portals (Arts, Earth, Science, History, etc)</li>
 					</section>
 
 					<section>
