--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 						<h2>About me...</h2>
 						<ul>
 							<li>I'm Jacob Clark</li>
-							<li>A Web Developer in Knowledge and Learning</li>
+							<li>A Senior Web Developer in Knowledge and Learning</li>
 							<li>Based in MediaCityUK, Salford</li>
 							<li>Passionate about modular, self containing components and the cloud (microservices)</li>
 						</ul>
